# nxDesk2.0

./: .gitignore  AI_ROADMAP.md  CHANGELOG_API_INTEGRATION.md  Cargo.toml  PKGBUILD  README.md  README_DEV.md  dev-start.sh  hosts.toml  package-lock.json  package.json  test-api.sh
.github/workflows/: ci.yml  release.yml
apps/admin-cli/: Cargo.toml
apps/admin-cli/src/: main.rs
apps/api-server/: Cargo.toml
apps/api-server/src/: discovery.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs
apps/desktop-client/: index.html  package.json  tsconfig.json
apps/desktop-client/src/: App.css  App.tsx  main.tsx
apps/desktop-client/src-tauri/: Cargo.toml  hosts.toml  tauri.conf.json
apps/desktop-client/src-tauri/src/: lib.rs  main.rs
apps/desktop-client/src/components/ActiveSession/: ActiveSession.module.css  ActiveSession.test.tsx  ActiveSession.tsx  deltaDecoder.test.ts  deltaDecoder.ts  index.ts  remoteAccess.test.ts  remoteAccess.ts  vncChannel.test.ts  vncChannel.ts
apps/desktop-client/src/components/AdminPanel/: AdminPanel.module.css  AdminPanel.test.tsx  AdminPanel.tsx
apps/desktop-client/src/components/ApiHealth/: ApiHealth.module.css  ApiHealth.tsx  index.ts
apps/desktop-client/src/components/ConnectionCard/: ConnectionCard.module.css  ConnectionCard.test.tsx  ConnectionCard.tsx
apps/desktop-client/src/components/Dashboard/: Dashboard.module.css  Dashboard.test.tsx  Dashboard.tsx
apps/desktop-client/src/components/HostList/: HostList.module.css  HostList.test.tsx  HostList.tsx  index.ts
apps/desktop-client/src/components/Icons/: Icons.tsx
apps/desktop-client/src/components/Login/: Login.module.css  Login.test.tsx  Login.tsx
apps/desktop-client/src/components/Logs/: Logs.module.css  Logs.test.tsx  Logs.tsx
apps/desktop-client/src/components/Settings/: Settings.module.css  Settings.test.tsx  Settings.tsx
apps/desktop-client/src/components/Toast/: Toast.module.css  ToastProvider.tsx  index.ts
apps/desktop-client/src/services/: api.ts  logger.ts
apps/desktop-client/src/styles/: tokens.css
apps/desktop-client/src/test/: render.tsx
apps/relay-server/: Cargo.toml
apps/relay-server/src/: config.rs  main.rs  server.rs  session.rs  tests.rs
apps/server-agent/: Cargo.toml
apps/server-agent/src/: app.rs  handler.rs  main.rs  service_windows.rs  socket.rs
apps/server-agent/src/platform/: generic.rs  linux.rs  mod.rs  windows.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/clipboard/: Cargo.toml
crates/clipboard/src/: lib.rs  policy.rs  sync.rs  traits.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/file-transfer/: Cargo.toml
crates/file-transfer/src/: lib.rs  policy.rs  service.rs  traits.rs  verifier.rs
crates/input-injector/: Cargo.toml
crates/input-injector/src/: events.rs  lib.rs  policy.rs  traits.rs
crates/input-injector/src/backends/: mock.rs  mod.rs  windows.rs  x11.rs
crates/os-pal/: Cargo.toml
crates/os-pal/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: capabilities.rs  lib.rs
crates/protocol/src/messages/: control.rs  file.rs  input.rs  mod.rs
crates/security/: Cargo.toml
crates/security/src/: access.rs  lib.rs
crates/session-manager/: Cargo.toml
crates/session-manager/src/: allocator.rs  continuity.rs  lib.rs  manager.rs  traits.rs
crates/session-manager/src/backends/: astra_x11.rs  mock.rs  mod.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
crates/video-pipeline/: Cargo.toml
crates/video-pipeline/src/: bitrate.rs  capture.rs  clock.rs  delta.rs  encoder.rs  lib.rs  monitors.rs  stream.rs  traits.rs
docs/: API_INTEGRATION.md  PROJECT-SPEC.md  ROADMAP.md  architecture.md  astra-test-plan.md  attestation-preparation-notes.md  audit-policy.md  ci-windows-agent.patch  ci.md  component-diagram.md  data-flow.md  desktop-client.md  hardening.md  installation-astra.md  installation-windows.md  known-limitations.md  module-boundaries.md  mvp-scope.md  offline-deployment.md  production-checklist.md  protocol-message-types.md  protocol.md  risks.md  security.md  testing.md  threat-model.md  troubleshooting.md  update-strategy.md  video-pipeline.md
docs/adr/: 0001-core-technology-stack.md  0002-transport-protocol.md  0003-astra-linux-session-strategy.md
local_bin/: .BUILDINFO  .MTREE  .PKGINFO  libvncserver.tar.zst  x11vnc.tar.zst
local_bin/usr/include/rfb/: rfbconfig.h
local_bin/usr/lib/: libvncclient.so.0.9.15  libvncserver.so.0.9.15
local_bin/usr/lib/cmake/LibVNCServer/: LibVNCServerConfig.cmake  LibVNCServerTargets-noconfig.cmake  LibVNCServerTargets.cmake
local_bin/usr/lib/pkgconfig/: libvncclient.pc  libvncserver.pc
prompts/: 00-analysis.md  01-architecture.md  02-repository-skeleton.md  03-protocol.md  04-security.md  05-server-agent.md  06-astra-session-manager.md  07-video-streaming.md  08-input-control.md  09-desktop-client.md  10-clipboard-file-transfer.md  11-relay-server.md  12-installers-offline-update.md  13-testing-ci.md  14-hardening-production.md  MASTER-PROMPT.md
scripts/: bump-version.sh  install-agent-offline.ps1  install-agent.ps1  install-agent.sh  setup-agent-arch.sh  uninstall-agent.ps1  uninstall-agent.sh  update-agent.ps1  update-agent.sh
templates/: agent.toml.default  ttgtiso-desk-agent.service
