[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util = "0.3"

# Workspace internal crates
config = { path = "../../crates/config" }
shared-types = { path = "../../crates/shared-types" }
audit = { path = "../../crates/audit" }
