[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Workspace internal crates
config = { path = "../../crates/config" }
transport = { path = "../../crates/transport" }
protocol = { path = "../../crates/protocol" }
shared-types = { path = "../../crates/shared-types" }
audit = { path = "../../crates/audit" }
