[package]
name = "os-pal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
shared-types = { path = "../shared-types" }
config = { path = "../config" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
] }
