[package]
name = "video-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
shared-types = { path = "../shared-types" }
png = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer = { workspace = true }
x11rb = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
